# portfolio-generator

./: .coveragerc  .dockerignore  .dvcignore  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yaml
docker/optimization_server/: Dockerfile  docker-compose.yml  nginx.conf
portfoliogenerator/: utils.py
portfoliogenerator/financial_instruments/: base.py
portfoliogenerator/models/: pso.py  slsqp.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements.txt
rust/optimization_server/: Cargo.toml  README.md
rust/optimization_server/src/: handlers.rs  lib.rs  main.rs  models.rs  objective.rs  taxbrackets.rs  utils.rs
rust/optimization_server/tests/: integration_tests.rs
rust/pso/: Cargo.toml
rust/pso/src/: lib.rs  optimizer.rs  particle.rs  utils.rs
rust/query_service/: Cargo.toml  README.md
rust/query_service/src/: lib.rs  loader.rs  models.rs
rust/query_service/tests/: integration_tests.rs
scripts/: pso_test.py
tests/: README.md
tests/data/: portfolio.csv
tests/integration/: load_testing.lua  test_container.py
tests/models/: test_pso.py
