[package]
name = "optimization_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nlopt = "0.6"
actix-web = "4"
actix-rt = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
meval = "0.2"
ordered-float = "2.1"
validator = { version = "0.18", features = ["derive"] }

[lib]
name = "optimization_server"
path = "src/lib.rs"

[dev-dependencies]
optimization_server = { path = "." }
