[package]
name = "query_service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }

[lib]
name = "query_service"
path = "src/lib.rs"

[dev-dependencies]
query_service = { path = "." }
